0.59.4.0/_sources/Reference/NodeReference/GafferImage/DisplayTransform.md.txt
DisplayTransform
================

Applies color transformations provided by
OpenColorIO via a DisplayTransform file and OCIO FileTransform.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The output image generated by this node.

enabled
-------

Turns the node on and off.

in
--

The input image

channels
--------

The names of the channels to process. Names should be
separated by spaces and can use Gaffer's standard
wildcards.

processUnpremultiplied
----------------------

Unpremultiplies data before processing, and premultiply again after processing.  This allows
accurate processing of nodes that deal with color, when running on partially transparent or
deep images.

context
-------

Context override for OCIO config.

inputColorSpace
---------------

The colour space of the input image.

display
-------

The name of the display to use.

view
----

The name of the view to use.