1.7.7.0/_sources/Reference/NodeReference/GafferImage/DisplayTransform.md.txt
DisplayTransform
================

Applies an OpenColorIO display transform to an image.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The output image generated by this node.

enabled
-------

Turns the node on and off.

in
--

The input image

channels
--------

The names of the channels to process. Names should be
separated by spaces and can use Gaffer's standard
wildcards.

processUnpremultiplied
----------------------

Unpremultiplies data before processing, and premultiply again after processing.  This allows
accurate processing of nodes that deal with color, when running on partially transparent or
deep images.

context
-------

> Warning : Deprecated - please use the `OpenColorIOContext`
> node instead.

inputColorSpace
---------------

The colour space of the input image.

display
-------

The name of the display to use. Defaults to the default display as
defined by the current OpenColorIO config.

view
----

The name of the view to use. Defaults to the default view for the
display, as defined by the current OpenColorIO config.